; ModuleID = '/home/carl/AnghaBench/disque/src/extr_disque-cli.c_cliSelect.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_disque-cli.c_cliSelect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 }
%struct.TYPE_5__ = type { i64 }

@config = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@REDIS_OK = common dso_local global i32 0, align 4
@context = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"SELECT %d\00", align 1
@REDIS_REPLY_ERROR = common dso_local global i64 0, align 8
@REDIS_ERR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @cliSelect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cliSelect() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i32, align 4
  %4 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @config, i32 0, i32 0), align 8
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = load i32, i32* @REDIS_OK, align 4
  store i32 %7, i32* %1, align 4
  br label %29

8:                                                ; preds = %0
  %9 = load i32, i32* @context, align 4
  %10 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @config, i32 0, i32 0), align 8
  %11 = call %struct.TYPE_5__* @redisCommand(i32 %9, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i64 %10)
  store %struct.TYPE_5__* %11, %struct.TYPE_5__** %2, align 8
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %13 = icmp ne %struct.TYPE_5__* %12, null
  br i1 %13, label %14, label %27

14:                                               ; preds = %8
  %15 = load i32, i32* @REDIS_OK, align 4
  store i32 %15, i32* %3, align 4
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @REDIS_REPLY_ERROR, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %14
  %22 = load i32, i32* @REDIS_ERR, align 4
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %21, %14
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %25 = call i32 @freeReplyObject(%struct.TYPE_5__* %24)
  %26 = load i32, i32* %3, align 4
  store i32 %26, i32* %1, align 4
  br label %29

27:                                               ; preds = %8
  %28 = load i32, i32* @REDIS_ERR, align 4
  store i32 %28, i32* %1, align 4
  br label %29

29:                                               ; preds = %27, %23, %6
  %30 = load i32, i32* %1, align 4
  ret i32 %30
}

declare dso_local %struct.TYPE_5__* @redisCommand(i32, i8*, i64) #1

declare dso_local i32 @freeReplyObject(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
